Fix link float on mobile when there are too many links

--- a/index.scss
+++ b/index.scss
@@ -410,6 +410,7 @@ canvas {
             border-radius: 0.7rem;
             margin: 0.2rem;
             background-color: #57575749;
+            float: right;
 
             img {
                 filter: contrast(1.5) invert(90%);
